fixed unnecesary z-index

--- a/index.css
+++ b/index.css
@@ -88,7 +88,6 @@ body{
   
 
     
-    z-index :0;
 }
 
 .header-overlay{
@@ -104,7 +103,6 @@ body{
     position: absolute;
     display: flex;
     flex-direction: column;
-    /* width: min-content; */
     z-index: 5;
 
 
@@ -224,7 +222,7 @@ hr{
     transition: transform 200ms ease;
     
 }
-.partners-grid-items::before{
+/* .partners-grid-items::before{
     content: " ";
     background-color: rgba(0, 0, 0,0);
     height: 100%;
@@ -236,21 +234,21 @@ hr{
     transition: all 200ms ease;
     /* display: none; */
     
-}
+
 
 .partners-grid-items:hover{
-   transform: scale(1.3);
+   transform: scale(1.1);
    z-index: 3;
     
 }
 
-.partners-grid-items:hover::before{
+/* .partners-grid-items:hover::before{
     background-color: rgba(0, 0, 0,0.7);
-    filter: blur(15px);
+    filter: blur(25px);
     height: 120%;
     width: 120%
     
-}
+} */
 
 .partner-name{
     align-self: flex-start;
